--- a/tpga/.htaccess
+++ b/tpga/.htaccess
@@ -8,7 +8,7 @@ RewriteRule ^([Z0-9]{6})/$ widget/widget.php?id=$1 [L]
 RewriteRule ^icon/([A-Z0-9]{4})/([0-9]+).png$ icon/icon.php?text=$1&size=$2 [L]
 
 RewriteRule ^ajax/prochainsdeparts/([A-Z0-9]{4})/$ ajax/ajaxprochainsdeparts.php?id=$1 [L]
-RewriteRule ^ajax/depart/([0-9]+)/$ ajax/ajaxdepart.php?id=$1 [L]
+RewriteRule ^ajax/depart/([0-9]+)/$ ajax/ajaxdepart.php?id=$1 [QSA,L]
 RewriteRule ^ajax/page/([A-Z0-9]{4})/(.*)$ ajax/ajaxpage.php?id=$1&name=$2 [B,L]
 
 RewriteRule ^itineraire/stops.json$ itineraire/stops.json.php [L]
