--- a/tpg/.htaccess
+++ b/tpg/.htaccess
@@ -3,6 +3,7 @@ RewriteEngine on
 RewriteBase /
 RewriteRule ^([A-Z0-9]{4})/?$ widget/create.php?stop=$1 [L]
 RewriteRule ^([Z0-9]{6})/?$ widget/widget.php?id=$1 [L]
+RewriteRule ^app/v3/stops.json$ app/v3/stops.json.php [QSA,L]
 RewriteRule ^ajax/depart/([0-9]+)/$ ajax/ajaxdepart.php?id=$1 [QSA,L]
 RewriteRule ^ajax/page/([A-Z0-9]{4})/(.*)$ ajax/ajaxpage.php?id=$1&name=$2 [B,L]
 RewriteRule ^itineraire/stops.json$ itineraire/stops.json.php [L]
