--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Environment
+APP_ENV=prod
+
 # TPG API key
 #     You can get one at https://data.tpg.ch.
 TPG_API_KEY=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxx
